# vpn

./: .easignore  .env  .gitignore  .gitmsg.txt  .npmrc  BUILD_INSTRUCTIONS.md  BUILD_LIBBOX_INSTRUCTION.md  EAS_REINIT_INSTRUCTION.md  INSTALL_LIBBOX.md  LIBBOX_FIX_SUCCESS.md  QUICK_START.md  README.md  app.ios.json  app.json  babel.config.js  build-apk-final.bat  build-apk.bat  build-bundle.bat  build-full.bat  clean_disk_c.bat  eas-build-pre-install.sh  eas.json  emergency_clean.ps1  find_large.ps1  info.txt  install-deps.bat  jest.config.js  jest.setup.js  metro.config.js  nativewind.config.ts  new.sh  package-lock.json  package.json  setup-disk-d.bat  setup-env-d.bat  stack-kotlin.txt  stack.txt  tailwind.config.js  tsconfig.json
.codex_tmp/libbox/: proguard.txt
.codex_tmp/libv2ray_unpacked/: AndroidManifest.xml
.codex_tmp/xraymobile_unpacked/: AndroidManifest.xml  proguard.txt
__tests__/: basic-syntax.test.ts  vpn-integration.test.ts
android/: build-error-full.txt  build.gradle  gradle.properties  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  xray_native.cpp
app/: _layout.tsx  add-list.tsx  index.tsx
eas-hooks/: eas-build-pre-install.sh
scripts/: build-libbox-aar.ps1  build-libbox-aar.sh  build-v2ray-aar.ps1  build-xray-mobile-aar.ps1  build-xray-mobile-aar.sh  check-aar.js  check-fdroid-apk.js  create-libbox-aar.js  download-fdroid-sfa.js  download-libbox-https.js  download-libbox-nekobox.js  download-sfa-libbox.js  download-singbox.js  fix-unicode.js  install-libbox-auto.js  patch-expo-worklets.js  reinstall-libbox.js  validate-build.js
(+29 files in other folders)
